--- a/src/scss/components/create-template.scss
+++ b/src/scss/components/create-template.scss
@@ -2,21 +2,46 @@
 
     @apply w-full p-5 border border-gray-200 dark:border-gray-700 rounded-lg;
 
+    .icon {
+
+        @apply cursor-pointer;
+
+        svg {
+
+            @apply stroke-gray-500 dark:stroke-gray-400;
+            
+        }
+
+        &.disabled {
+
+            svg {
+
+                @apply stroke-gray-400 dark:stroke-gray-500;
+            
+            }
+
+            @apply pointer-events-none;
+
+        }
+
+    }
+
+
     .create-temp-header {
 
         @apply flex items-center mb-5;
 
         .temp-title {
 
-            @apply flex gap-2.5 w-full;
+            @apply flex gap-2.5 w-full mr-3;
 
             input {
 
-                @apply w-full bg-transparent text-gray-600 dark:text-white;
+                @apply w-full text-xl font-medium bg-transparent text-gray-600 dark:text-white;
             
                 &::placeholder {
 
-                    @apply text-xl text-gray-600 dark:text-white font-medium;
+                    @apply text-gray-600 dark:text-white;
                     
                 }
 
@@ -40,38 +65,6 @@
 
             }
 
-            .icon-clock {
-
-                svg {
-
-                    path {
-
-                        @apply dark:stroke-gray-300;
-
-                    }
-
-                }
-
-            }
-
-            .icon-delete {
-
-                &.disabled {
-
-                    svg {
-
-                        path {
-
-                            @apply stroke-gray-300 dark:stroke-gray-500;
-
-                        }
-
-                    }
-
-                }
-
-            }
-
         }
 
     }
@@ -82,7 +75,7 @@
 
         textarea {
 
-            @apply w-full resize-none bg-transparent overflow-y-auto;
+            @apply w-full text-lg resize-none bg-transparent overflow-y-auto text-gray-500 dark:text-gray-300;
 
             &:focus {
 
