--- a/src/scss/components/block-duration-timer.scss
+++ b/src/scss/components/block-duration-timer.scss
@@ -1,6 +1,6 @@
 .duration-timer-card {
 
-    @apply p-3 bg-white dark:bg-gray-700 w-fit h-24 rounded border border-gray-200 dark:border-gray-600 inline-flex flex-col gap-1;
+    @apply p-3 bg-white dark:bg-gray-700 rounded border border-gray-200 dark:border-gray-600 inline-flex flex-col gap-1;
 
     .time-label {
 
